# tableGen

./: .gitignore  pyproject.toml  tableGen.py
config/: config.yaml
docs/: GUIDELINES.md  README.md
src/: __init__.py  config_loader.py  data_loader.py  data_processor.py  motor_parameters.py  plotting.py  table_generator.py  table_parameters.py
src/lib/: __init__.py  conversions.py
src/lib/calculations/: __init__.py  flux.py  frequency.py  power.py  torque.py  transformations.py
src/lib/conversions/: __init__.py  machine.py  speed.py  waveform.py
src/lib/plots/calculations/: frequency.py  transformations.py
src/plots/: __init__.py  flux.py  inductance.py  torque.py
src/ui/: __init__.py  dashboard.py
tests/: manual_test_plotting.py  test_calculations.py
